<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBlue"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:weightSum="1"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/backTo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/ic_baseline_backspace"
                    android:padding="10dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.9"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Change Password"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/password_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/ic_baseline_lock_orange"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/textInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Change Password"
                    android:textColor="@color/colorOrange"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:transitionName="text_info" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Successfully"
                    android:textColor="#08804c"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/changePassMSG"
                    android:visibility="gone"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:id="@+id/errorMessage"
                    android:gravity="center"
                    android:text="Some Error Occured"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorRed"
                    android:visibility="gone"
                    android:textSize="15sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/oldPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border_design"
                        android:drawableStart="@drawable/pass_focus"
                        android:drawablePadding="10dp"
                        android:focusable="true"
                        android:hint="@string/old_pass"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        app:passwordToggleEnabled="true"
                        android:textColor="@color/colorBlue"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    android:layout_marginTop="10dp"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/newPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border_design"
                        android:drawableStart="@drawable/pass_focus"
                        android:drawablePadding="10dp"
                        android:focusable="true"
                        android:hint="@string/new_pass"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:maxLength="20"
                        app:passwordToggleEnabled="true"
                        android:textColor="@color/colorBlue"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    android:layout_marginTop="10dp"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/confirmPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border_design"
                        android:drawableStart="@drawable/pass_focus"
                        android:drawablePadding="10dp"
                        android:focusable="true"
                        android:hint="@string/confirm_pass"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:maxLength="20"
                        app:passwordToggleEnabled="true"
                        android:textColor="@color/colorBlue"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>
                    <Button
                        android:id="@+id/changePass"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="left"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button"
                        android:padding="10dp"
                        android:text="Submit"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textAllCaps="false"
                        android:transitionName="next_button"
                        />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:id="@+id/passError"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    android:text="Error Password"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorRed"
                    android:visibility="gone"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>